# AIEDU-WEB

./: .gitignore  Dockerfile  README.md  mvp-kids-ai.md  package.json  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: export-pdf.yml  pr-ci.yml  review-gate.yml
app/domain/: ai.py  learning.py
content/: kids_3yo_dataset.json
data/: mastery.json
docs/: BACKLOG.md  agile-iteration-plan.md  ai-llm-architecture.md  architecture.md  parent-guide.md  pm-acceptance-guide.md  pm-acceptance.md  prd.md  qa-acceptance-guide.md  qa-acceptance-report.md  qa-test-plan.md  rd-dev-guide.md  requirements-analysis-mvp.md  tdd-review-plan.md  troubleshooting.md
docs/releases/: v0.2.0.md
e2e/: README.md  playwright.config.ts
e2e/tests/: sample.spec.ts
sop/: 01-requirements-development.md  02-requirements-discussion.md  03-architecture-design.md  04-ux-ui-design.md  05-development-process.md  06-code-review.md  07-testing-strategy.md  08-release-process.md  09-comment-standards.md  10-dev-environment-guide.md  11-debugging-troubleshooting.md  12-feature-navigation-guide.md  CHECKLIST-EXEC.md  README.md  SUMMARY.md
tests/: test_chat_api.py  test_events.py  test_lesson_api.py  test_mastery.py  test_metrics.py  test_openai_client.py  test_openapi_schema.py  test_rag.py  test_ready.py  test_safety.py  test_streaming_api.py  test_trace_id_uuid.py  test_weekly_csv.py
tools/: md2pdf.js  package-lock.json  package.json  weekly-report.js
web/: index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
web/src/: main.tsx
(+27 files in other folders)
