[project]
name = "kids-ai-app"
version = "0.1.0"
description = "AI kids education web backend (FastAPI)"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0,<0.116.0",
  "uvicorn[standard]>=0.30.0,<0.31.0",
  "httpx>=0.27.0,<0.28.0",
  "pydantic>=2.8.0,<2.9.0"
]

[tool.ruff]
line-length = 100
select = ["E","F","I","UP","B","C90"]
ignore = ["E203"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.isort]
profile = "black"

